--- a/mscore/barline.ui
+++ b/mscore/barline.ui
@@ -39,14 +39,24 @@
        <number>8</number>
       </property>
       <item>
-       <layout class="QHBoxLayout">
-        <property name="spacing">
-         <number>6</number>
-        </property>
+       <layout class="QGridLayout" name="gridLayout">
         <property name="margin">
          <number>0</number>
         </property>
-        <item>
+        <item row="0" column="3">
+         <widget class="QSpinBox" name="span">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+          <property name="buttonSymbols">
+           <enum>QAbstractSpinBox::NoButtons</enum>
+          </property>
+          <property name="maximum">
+           <number>999999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -68,7 +78,7 @@
           </property>
          </widget>
         </item>
-        <item>
+        <item row="0" column="1">
          <widget class="QSpinBox" name="subType">
           <property name="readOnly">
            <bool>true</bool>
@@ -81,7 +91,20 @@
           </property>
          </widget>
         </item>
-        <item>
+        <item row="0" column="4">
+         <spacer>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="2">
          <widget class="QLabel" name="label_2">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -103,8 +126,15 @@
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="QSpinBox" name="span">
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>spanFrom:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QSpinBox" name="spanFrom">
           <property name="readOnly">
            <bool>true</bool>
           </property>
@@ -116,18 +146,25 @@
           </property>
          </widget>
         </item>
-        <item>
-         <spacer>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+        <item row="1" column="3">
+         <widget class="QSpinBox" name="spanTo">
+          <property name="readOnly">
+           <bool>true</bool>
           </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
+          <property name="buttonSymbols">
+           <enum>QAbstractSpinBox::NoButtons</enum>
           </property>
-         </spacer>
+          <property name="maximum">
+           <number>999999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>spanTo:</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
