add slur articulation
Former-commit-id: ab9774ec4098512068b8ef708167d9aa6e702c50

--- a/share/templates/instruments.xml
+++ b/share/templates/instruments.xml
@@ -5531,6 +5531,10 @@
         <velocity>100</velocity>
         <gateTime>40</gateTime>
         </Articulation>
+      <Articulation name="tenuto">
+        <velocity>100</velocity>
+        <gateTime>100</gateTime>
+        </Articulation>
       </Instrument>
 
     <Instrument id="clavichord">
