fix #18548: Feathered Beam broken
Fixed broken Feathered Beams. Also reduced step from 1.00 to 0.25 in
inspector_beam.ui grow left/right arrow controls.


Former-commit-id: ff0be470e447e2e413b6475ee7010f7ff53ab9f1

--- a/mscore/inspector_beam.ui
+++ b/mscore/inspector_beam.ui
@@ -187,6 +187,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="singleStep">
+        <double>0.250000000000000</double>
+       </property>
        <property name="value">
         <double>1.000000000000000</double>
        </property>
@@ -199,6 +202,9 @@
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="singleStep">
+        <double>0.250000000000000</double>
        </property>
        <property name="value">
         <double>1.000000000000000</double>
