Search box/filter added to the instrument list
Former-commit-id: a1631f448782fb0faa47551501c99c7f78ddb544

--- a/mscore/instrdialog.ui
+++ b/mscore/instrdialog.ui
@@ -46,6 +46,33 @@
         </widget>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QLineEdit" name="search">
+           <property name="focusPolicy">
+            <enum>Qt::StrongFocus</enum>
+           </property>
+           <property name="inputMask">
+            <string notr="true"/>
+           </property>
+           <property name="placeholderText">
+            <string>Search</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="clearSearch">
+           <property name="text">
+            <string>Clear</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
         <widget class="QCheckBox" name="showMore">
          <property name="text">
           <string>show more</string>
