read only spinboxes in debugger dialog
Former-commit-id: 5c5082789d777910c49cf57cfa5f132adcaa4797

--- a/mscore/dynamic.ui
+++ b/mscore/dynamic.ui
@@ -55,6 +55,9 @@
         </item>
         <item>
          <widget class="QSpinBox" name="subType">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
           <property name="maximum">
            <number>999999</number>
           </property>
