--- a/mscore/keysig.ui
+++ b/mscore/keysig.ui
@@ -81,10 +81,18 @@
        </widget>
       </item>
       <item row="1" column="3">
-       <widget class="QSpinBox" name="naturalType"/>
+       <widget class="QSpinBox" name="naturalType">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item row="1" column="5">
-       <widget class="QSpinBox" name="customType"/>
+       <widget class="QSpinBox" name="customType">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item row="0" column="0" colspan="2">
        <widget class="QCheckBox" name="showCourtesySig">
