--- a/mscore/tupletdialog.ui
+++ b/mscore/tupletdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MuseScore: create tuplet</string>
+   <string>MuseScore: Create Tuplet</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="margin">
