rework of palettes & workspace
Former-commit-id: 97b135dcac95f55e469c77d224d582a8c08d9324

--- a/mscore/masterpalette.ui
+++ b/mscore/masterpalette.ui
@@ -17,10 +17,13 @@
    <item>
     <widget class="QListWidget" name="listWidget">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="resizeMode">
+      <enum>QListView::Adjust</enum>
      </property>
      <item>
       <property name="text">
