Small string fix
Former-commit-id: 02c2bf6d11184472a7bd7cf0e27e22df964275d6

--- a/mscore/stafftype.ui
+++ b/mscore/stafftype.ui
@@ -357,7 +357,7 @@
               <item>
                <widget class="QPushButton" name="pushFullConfig">
                 <property name="text">
-                 <string>« Full Configur. </string>
+                 <string>« Full Configuration</string>
                 </property>
                </widget>
               </item>
